# SimpleQueryParserSpirit

./: CMakeLists.txt  README.md
src/: ast_and_node.cc  ast_and_node.h  ast_logic_node.cc  ast_logic_node.h  ast_node.cc  ast_node.h  ast_not_node.cc  ast_not_node.h  ast_or_node.cc  ast_or_node.h  ast_phrase_node.cc  ast_phrase_node.h  driver.cc  driver.h  main.cc  query_lexer.h  query_parser.h
